syntax = "proto3";

package parser;

service ParserService {
    rpc Parse (ParserRequest) returns (ParserResponse);
}

// The request message containing the url.
message ParserRequest {
    string url = 1;
}

// The response message containing the url's title, body and links of thumbnails.
message ParserResponse {
    string title = 1;
    string thumbnail_url = 2;
    string content = 3;
}